--- a/README.org
+++ b/README.org
@@ -40,14 +40,14 @@ bind -n C-h if-shell "$is_vim_emacs" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim_emacs" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim_emacs" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim_emacs" "send-keys C-l" "select-pane -R"
-bind -n C-' if-shell "$is_vim_emacs" "send-keys C-'" "select-pane -l"
+bind -n C-] if-shell "$is_vim_emacs" "send-keys C-]" "select-pane -l"
 
 # enable in copy mode key table
 bind -Tcopy-mode-vi C-h if-shell "$is_vim_emacs" "send-keys C-h" "select-pane -L"
 bind -Tcopy-mode-vi C-j if-shell "$is_vim_emacs" "send-keys C-j" "select-pane -D"
 bind -Tcopy-mode-vi C-k if-shell "$is_vim_emacs" "send-keys C-k" "select-pane -U"
 bind -Tcopy-mode-vi C-l if-shell "$is_vim_emacs" "send-keys C-l" "select-pane -R"
-bind -Tcopy-mode-vi C-' if-shell "$is_vim_emacs" "send-keys C-'" "select-pane -l"
+bind -Tcopy-mode-vi C-] if-shell "$is_vim_emacs" "send-keys C-]" "select-pane -l"
 #+end_src
 
 ** Manipulate tmux side pane
