--- a/README.org
+++ b/README.org
@@ -81,11 +81,11 @@ side pane to the whole tmux window
   :config
   (tmux-pane-mode)
   (map! :leader
-        (:prefix ("v" . "vpane")
+        (:prefix ("v" . "tmux pane")
           :desc "Open vpane" :nv "o" #'tmux-pane-open-vertical
-          :desc "Toggle vpane" :nv "v" #'tmux-pane-toggle-vertical
           :desc "Open hpane" :nv "h" #'tmux-pane-open-horizontal
           :desc "Open hpane" :nv "s" #'tmux-pane-open-horizontal
+          :desc "Open vpane" :nv "v" #'tmux-pane-open-vertical
           :desc "Close pane" :nv "c" #'tmux-pane-close
           :desc "Rerun last command" :nv "r" #'tmux-pane-rerun))
   (map! :leader
